[gd_scene load_steps=5 format=3 uid="uid://c83ingpvbre02"]

[ext_resource type="Script" path="res://gui/create_route_menu.gd" id="1_yswjq"]
[ext_resource type="Texture2D" uid="uid://clnehws11k21h" path="res://assets/Icons/connection.png" id="2_2ur75"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ifyfw"]
bg_color = Color(0, 0.419608, 0.227451, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwo44"]
bg_color = Color(0.580392, 0.0352941, 0.121569, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="CreateRoute" type="Control"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yswjq")

[node name="CreateRouteRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="CreateRouteContainer" type="VBoxContainer" parent="CreateRouteRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 15

[node name="RouteTitle" type="Label" parent="CreateRouteRect/CreateRouteContainer"]
layout_mode = 2
text = "Create Route"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RouteConnectionContainer" type="VBoxContainer" parent="CreateRouteRect/CreateRouteContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="RouteConnection" type="HBoxContainer" parent="CreateRouteRect/CreateRouteContainer/RouteConnectionContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="FromLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/RouteConnectionContainer/RouteConnection"]
layout_mode = 2
text = "TEST"

[node name="ConnectionTexture" type="TextureRect" parent="CreateRouteRect/CreateRouteContainer/RouteConnectionContainer/RouteConnection"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("2_2ur75")

[node name="ToLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/RouteConnectionContainer/RouteConnection"]
layout_mode = 2
text = "TEST2"

[node name="RouteDistanceLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/RouteConnectionContainer"]
layout_mode = 2
text = "122km"
horizontal_alignment = 1

[node name="VehicleContainer" type="VBoxContainer" parent="CreateRouteRect/CreateRouteContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VehicleTitle" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer"]
layout_mode = 2
text = "Vehicle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RouteSurfaceOptions" type="OptionButton" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer"]
layout_mode = 2
mouse_filter = 1

[node name="VehicleCtx" type="GridContainer" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 5
columns = 5

[node name="SurfaceLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Surface"

[node name="SpeedLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Speed"

[node name="CostLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Cost"

[node name="UpkeepLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Upkeep"

[node name="SpaceLabel" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Space"

[node name="SurfaceValue" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
text = "Water"

[node name="SpeedValue" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
text = "15"

[node name="CostValue" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
text = "100"

[node name="UpkeepValue" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
text = "15"

[node name="SpaceValue" type="Label" parent="CreateRouteRect/CreateRouteContainer/VehicleContainer/VehicleCtx"]
layout_mode = 2
text = "15"

[node name="RouteCargoTitle" type="Label" parent="CreateRouteRect/CreateRouteContainer"]
layout_mode = 2
text = "Route Cargo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RouteActions" type="HBoxContainer" parent="CreateRouteRect/CreateRouteContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="RouteConfirmBtn" type="Button" parent="CreateRouteRect/CreateRouteContainer/RouteActions"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ifyfw")
text = "Confirm"

[node name="RouteCancelBtn" type="Button" parent="CreateRouteRect/CreateRouteContainer/RouteActions"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_iwo44")
text = "Cancel"

[connection signal="close_menu" from="." to="." method="_on_close_menu"]
[connection signal="item_selected" from="CreateRouteRect/CreateRouteContainer/VehicleContainer/RouteSurfaceOptions" to="." method="_on_route_surface_options_item_selected"]
[connection signal="button_down" from="CreateRouteRect/CreateRouteContainer/RouteActions/RouteConfirmBtn" to="." method="_on_route_confirm_btn_button_down"]
[connection signal="button_down" from="CreateRouteRect/CreateRouteContainer/RouteActions/RouteCancelBtn" to="." method="_on_route_cancel_btn_button_down"]
